finally fix icons on mobile

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   height: 100vh;
   color: #333;
   transition: background 1s linear;
+  overflow: hidden;
 }
 
 .hot-weather {
@@ -39,6 +40,7 @@ body {
   border-radius: 12px;
   overflow: hidden;
   width: 350px;
+  margin-bottom: 50px;
 }
 
 .weather-header {
@@ -154,7 +156,7 @@ body {
   padding: 15px 10px;
   text-align: center;
   font-size: 20px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
